# AoC2022

./: aoc.cabal  haskell.cabal
app/: Day.hs.template  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Main.hs
