cabal-version:      2.4
name:               aoc
version:            0.2.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day1, Day2, Day3, Day4, Day5, Day6

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.2.0,
        split ^>=0.2.3.5,
        containers ^>=0.6.5.1,
        regex-posix ^>=0.96.0.1
    hs-source-dirs:   app
    default-language: Haskell2010
